organizando estruturas iniciais

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,1 @@
-
-<section class="navbar">
-  <img class="logo" src="/assets/logo.png" alt="logo" />
-  <h2 class="description">Talk to strangers!</h2>
-  <h2 class="online"></h2>
-</section>
-
-<main class="main">
-  <section class="conversation"></section>
-
-  <form class="form">
-    <button type="button" class="btn start bottom-left-radius" id="start">
-      Start
-    </button>
-    <button type="button" class="btn bottom-left-radius hide" id="stop">
-      Stop
-    </button>
-    <button
-      type="button"
-      class="btn bottom-left-radius bold hide"
-      id="really"
-    >
-      Really?
-    </button>
-    <textarea name="text" id="text" class="textarea" disabled></textarea>
-    <button
-      type="submit"
-      id="send"
-      class="btn bottom-right-radius"
-      disabled
-    >
-      Send
-    </button>
-  </form>
-</main>
+<router-outlet></router-outlet>
