--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 *,
 *::before,
 *::after {
@@ -77,12 +76,12 @@ body {
   margin-bottom: 0.7rem;
 }
 
-.author-stranger {
+.authorStranger {
   color: #ff0101;
   font-weight: 700;
 }
 
-.author-you {
+.authorYou {
   color: #0101ff;
   font-weight: 700;
 }
@@ -114,11 +113,11 @@ body {
   }
 }
 
-.bottom-left-radius {
+.bottomLeftRadius {
   border-bottom-left-radius: 7px;
 }
 
-.bottom-right-radius {
+.bottomRightRadius {
   border-bottom-right-radius: 7px;
 }
 
@@ -132,7 +131,7 @@ body {
   font-family: inherit;
   font-size: 2rem;
   border: 1px solid #cccccc;
-  padding-top: 25px;
+  padding: 20px 15px;
 }
 
 .textarea:focus {
@@ -148,7 +147,6 @@ body {
 }
 
 @media only screen and (max-width: 56.25em) {
-  /* 900px */
   .description {
     margin-left: 6rem;
     font-size: 2rem;
@@ -160,14 +158,12 @@ body {
 }
 
 @media only screen and (max-width: 48.125em) {
-  /* 770px */
   .online {
     display: none;
   }
 }
 
 @media only screen and (max-width: 43.75em) {
-  /* 700px */
   .form {
     grid-template-columns: 10rem 1fr 10rem;
   }
@@ -178,7 +174,6 @@ body {
 }
 
 @media only screen and (max-width: 31.25em) {
-  /* 500px */
   .conversation {
     height: 90%;
   }
@@ -194,14 +189,12 @@ body {
 }
 
 @media only screen and (max-width: 32.5em) {
-  /* 520px */
   .description {
     display: none;
   }
 }
 
 @media only screen and (max-width: 28.125em) {
-  /* 450px */
   .logo {
     height: 12rem;
   }
