--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,6 +1,6 @@
 
 <section class="navbar">
-  <img class="logo" src="/omeglestr/assets/logo.png" alt="logo" />
+  <img class="logo" src="/assets/logo.png" alt="logo" />
   <h2 class="description">Talk to strangers!</h2>
   <h2 class="online">{{currentOnline}}</h2>
 </section>
