--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,6 +60,7 @@ body {
   border-top-left-radius: 7px;
   border-top-right-radius: 7px;
   padding: 1.5rem;
+  padding-bottom: 2rem;
   font-size: 2rem;
   word-break: break-word;
   overflow-y: auto;
