incluindo tempo de expiração no evento de limpagem de status

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,8 +39,12 @@ body {
   transform: rotate(-6deg);
 }
 
+.config {
+  margin: 0 2rem 0 auto;
+  cursor: pointer;
+}
+
 .online {
-  margin-left: auto;
   margin-right: 1rem;
   font-size: 2.7rem;
   color: #6cb5ff;
