--- a/src/styles.scss
+++ b/src/styles.scss
@@ -204,3 +204,27 @@ body {
     height: 12rem;
   }
 }
+
+modal-outlet {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0,0,0,.1);
+  border: 1px solid;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 500;
+
+  > * {
+    margin: 0 auto;
+    display: block;
+    min-width: 200px;
+    background-color: white;
+    border-radius: 15px;
+    padding: 1rem;
+    box-sizing: border-box;
+  }
+}
