codificando mecanismo de configuração de relays

--- a/src/app/shared/relay-config/relay-config.component.html
+++ b/src/app/shared/relay-config/relay-config.component.html
@@ -1,11 +1,14 @@
 <form>
+  <ul class="relayList">
+    <li *ngFor="let relay of relays">{{relay}}</li>
+  </ul>
+
   <div>
     <label>Relay</label>
     <input type="text" autocomplete="off">
   </div>
 
   <div>
-    <button>add</button>
+    <button type="button">add</button>
   </div>
-  
 </form>
