--- a/src/styles.scss
+++ b/src/styles.scss
@@ -151,6 +151,34 @@ body {
   font-weight: 700;
 }
 
+ul.relayList {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
+  max-height: 150px;
+  margin-bottom: 1rem;
+
+  >li {
+    margin: .5rem;
+
+    .removeButton {
+      color: white;
+      background-color: transparent;
+    }
+    
+    &:before {
+      content: '';
+      display: inline-block;
+      background-color: rgb(0, 204, 0);
+      border-radius: 2px;
+      width: 6px;
+      height: 6px;
+      margin-right: 8px;
+    }
+  }
+}
+
 @media only screen and (max-width: 56.25em) {
   .description {
     margin-left: 6rem;
