--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,7 @@ body {
 .config {
   margin: 0 2rem 0 auto;
   cursor: pointer;
+  color: #a5a5a5;
 }
 
 .online {
@@ -238,18 +239,19 @@ modal-outlet {
   justify-content: center;
   align-items: center;
   background-color: rgba(0,0,0,.1);
-  border: 1px solid;
+  border: 0;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: 500;
-
+  
   > * {
-    margin: 0 auto;
+    margin: 4rem auto;
     display: block;
     min-width: 200px;
+    max-width: 250px;
     background-color: white;
     border-radius: 15px;
     padding: 1rem;
