incluindo sinalizador personalizado de erro nas mensagens do chat

--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -24,11 +24,15 @@
       *ngFor="let message of messages"
       class="chat"
      >
+      <svg *ngIf="message[1]" class="messageNotSent" [title]="message[1]" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+        <path d="M17 3.34a10 10 0 1 1 -15 8.66l.005 -.324a10 10 0 0 1 14.995 -8.336m-5 11.66a1 1 0 0 0 -1 1v.01a1 1 0 0 0 2 0v-.01a1 1 0 0 0 -1 -1m0 -7a1 1 0 0 0 -1 1v4a1 1 0 0 0 2 0v-4a1 1 0 0 0 -1 -1" />
+      </svg>
       <span
-        [class.authorStranger]="message.author === authorStrange"
-        [class.authorYou]="message.author === authorYou"
-      >{{message.author | author}}: </span>
-      <span class="text">{{message.text}}</span>
+        [class.authorStranger]="message[0].author === authorStrange"
+        [class.authorYou]="message[0].author === authorYou"
+      >{{message[0].author | author}}: </span>
+      <span class="text">{{message[0].text}}</span>
     </div>
 
     <div class="message" *ngIf="strangeIsTyping">
