--- a/src/app/shared/relay-config/relay-config.component.html
+++ b/src/app/shared/relay-config/relay-config.component.html
@@ -14,7 +14,7 @@
   <div class="field">
     <label>Relay</label>
     <div class="fieldWithButton">
-      <input #relayField name="relay" type="text" autocomplete="off" placeholder="wss://relay.example" (key.enter)="addRelay(relayField)">
+      <input #relayField name="relay" type="text" autocomplete="off" placeholder="wss://relay.example" (keyup.enter)="addRelay(relayField)">
       <button (click)="addRelay(relayField)" type="button">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
