--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,6 +78,11 @@ body {
   margin-bottom: 0.7rem;
 }
 
+.messageNotSent {
+  color: #ff8100;
+  margin: -.5rem 1rem;
+}
+
 .chat {
   margin-bottom: 0.7rem;
 }
