including warning message for relay customization

--- a/src/app/shared/relay-config/relay-config.component.html
+++ b/src/app/shared/relay-config/relay-config.component.html
@@ -11,6 +11,8 @@
     </li>
   </ul>
 
+  <span class="warn">By changing default relays, will be harder find strangers</span>
+
   <div class="field">
     <label>Relay</label>
     <div class="fieldWithButton">
