corrigindo mensagem de disconnect

--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -81,7 +81,7 @@
     <button
       type="button"
       class="btn bottomLeftRadius bold"
-      (click)="endSession(); cleanMessageField(messageField)"
+      (click)="endSession(authorYou); cleanMessageField(messageField)"
       *ngIf="currentState === stateUpToDisconnect"
     >
       Really?
